[package]
name = "nishikaku"
version = "0.1.0"
authors = ["Luminarys <postmaster@gensok.io>"]
build = "build/main.rs"

[dependencies]
glium = "0.14.0"
ncollide = "0.9.0"
nalgebra = "0.8.2"
clock_ticks = "0.1.0"
image = "0.9.0"
sdl2 = "0.19"
sdl2_mixer = "0.18.0"

[profile.dev]
opt-level = 1
debug = true
